--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -25,15 +25,17 @@ body {
     color: orangered;
 }
 
-.zeroheading {
-    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
-}
-
-.zero {
+.page-404 {
+    border-radius: 0.5em;
+    padding: 2em;
+    background-color: #343a40e3;
     line-height: 2em;
     font-size: 1.5em;
-    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
 }
+
+.zeroheading {}
+
+.zero {}
 
 
 /* END GLOBAL */
